package es.etg.tierno.daw.examen.vera.model.dao;

public abstract class BaseDatosConnection implements BaseDatos{
    

}
