package es.etg.tierno.daw.examen.vera.model.dao;

public enum Modo {
    SLQLITE, MARIADB, ORACLE, MUCK
}
