package es.etg.tierno.daw.examen.vera.model.entities;

public interface Analisis extends AnalisisEmpresa, AnalisisDirectora, AnalisisExperto, AnalisisDesarrolladora, AnalisisJunior {
    
}
